--- a/sway/config
+++ b/sway/config
@@ -282,12 +282,17 @@ bindsym XF86MonBrightnessDown exec brightnessctl s 5%- | sed -En 's/.*\(([0-9]+)
 
 # Bind volume control hotkeys (and write number on wob's pipe)
 
-bindsym XF86AudioMute exec amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' > $WOBSOCK
-bindsym XF86AudioLowerVolume exec amixer sset Master 5%- | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
-bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+ | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
+# Bind volume control hotkeys
+bindsym XF86AudioMute exec pamixer --toggle-mute 
+#&& pamixer --get-volume > $WOBSOCK 
+
+bindsym XF86AudioLowerVolume exec pamixer -d 5  && pamixer --get-volume > $WOBSOCK
+
+bindsym XF86AudioRaiseVolume exec pamixer -i 5 && pamixer --get-volume > $WOBSOCK
+
 
 # Bind mic control hotkey
-bindsym XF86AudioMicMute exec amixer -q sset Capture toggle
+bindsym XF86AudioMicMute exec pamixer --default-source --toggle-mute
 
 # Bind Print hotkey to screenshot
 bindsym Print exec grim
