Updated fuzzel configuration

--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -25,7 +25,7 @@ terminal=kitty -e  # Note: you cannot actually use environment variables here
 # letter-spacing=0
 
 # layer = top
-# exit-on-keyboard-focus-loss = yes
+exit-on-keyboard-focus-loss = no
 
 [colors]
  background=282a36fa
@@ -41,7 +41,7 @@ terminal=kitty -e  # Note: you cannot actually use environment variables here
 
 [dmenu]
 # mode=text  # text|index
- exit-immediately-if-empty=yes
+exit-immediately-if-empty=no
 
 [key-bindings]
 # cancel=Escape Control+g
